<resources>

    <string name="app_name">Speech Cards</string>
    <string name="app_head">Speech Cards</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Speech Cards</string>

    <!-- Buttons -->
    <string name="btnNext">Siguiente</string>
    <string name="btnPrev">Anterior</string>
    <string name="btnNewSpeech">Nueva coleccion</string>
    <string name="btnEditSpeech">Editar</string>
    <string name="btnPlaySpeech">Reproducir</string>
    <string name="btnPrevCard">Prev</string>
    <string name="btnNextCard">Sig</string>
    <string name="btnAddCard">Añadir</string>
    <string name="btnDeleteCard">Borrar</string>
    <string name="btnEnd">Terminar</string>
    <string name="btnMod">Guardar</string>
    <string name="btnList">Lista de colecciones</string>
    <string name="btnBack">Volver</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnPreview">Vista Previa</string>
    <string name="btnAceptar">Aceptar</string>

    <!-- EditTexts -->
    <string name="etHeader">Cabecera:</string>
    <string name="etBody">Texto:</string>
    <string name="AddCards">Añadir Tarjetas</string>

    <!-- TextViews -->
    <string name="tvTitle">Título de la colección:</string>
    <string name="tvHelp">
        <![CDATA[
       	<b><u>Edición</u></b>
       	<br><br>
       	-Para agregar la primera tarjeta, simplemente escribir la cabecera y el cuerpo y pulsar en guardar.
       	<br><br>
       	-Para añadir una tarjeta, pulsar en menu, "Añadir tarjeta", rellenar los campos y pulsar en guardar.
       	<br><br>
       	-Puedes borrar la tarjeta actual pulsando en la opción "Borrar" del menú.
       	<br><br>
       	-Cuando pulses "Añadir tarjeta" se añadirá después de la tarjeta actual.
       	<br><br>
       	-El botón "Borrar Colección" borrará completamente la colección actual y todas sus tarjetas.
       	<br><br><br>
        <b><u>Formatear textos</u></b>
        <br>
        Cuando edites una tarjeta, puedes formatear el texto de la siguiente manera:
        <br><br>
        <i>-Negritas</i>
        <br>Para resaltar algo en <b>negrita</b> pon el texto que quieras resaltar #entre almohadillas#
        <br><br>
        <i>-Subrayado</i>
        <br>Para <u>subrayar,</u> pon el texto que quieras _entre guiones bajos_
        <br><br>
        <i>-Cursivas</i>
        <br>Si quieres poner el texto <i>en cursivas</i>, usa los %símbolos de porcentaje%]]></string>

    <!-- Menus -->
    <string name="mnDelSpeech">Borrar colección</string>
    <string name="mnDelCard">Borrar tarjeta</string>
    <string name="mnAddCard">Añadir tarjeta</string>
    <string name="mnHelp">Ayuda</string>
    <string name="mnEditSpeech">Editar</string>

    <!-- Toasts -->
    <string name="toastVoidBody">Debe escribir algo en el cuerpo.</string>
    <string name="toastVoidHeader">Debe escribir algo en la cabecera.</string>
    <string name="toastAddCard">Se ha añadido la tarjeta.</string>
    <string name="toastDelCard">Tarjeta borrada.</string>
    <string name="toastFisrtCard">Se encuentra en la primera tarjeta.</string>
    <string name="toastNoCards">No hay tarjetas.</string>
    <string name="toastNoMoreCards">No hay más tarjetas.</string>
    <string name="toastFail">Se ha producido un error.</string>
    <string name="toastUpdateCard">Se ha actualizado la tarjeta.</string>
    <string name="toastVoidName">Debe introducir un nombre.</string>
    <string name="toastDelSpeech">Colección borrada.</string>
    <string name="toastExistsSpeech">Ya existe una colección con ese nombre.</string>
    <string name="toastNoSpeech">No hay ningúna colección.</string>
    <string name="toastSaveCard">Se ha guardado la tarjeta.</string>
    <string name="toastUpdateSize">Se ha actualizado el tamaño.</string>
    
    <!-- Dialogs -->
    <string name="dialTitle">Confirmacion</string>
    <string name="dialMessageSpeech">¿Desea borrar la colección actual? La acción no se podrá deshacer.</string>
    <string name="dialMessageCard">¿Desea borrar la tarjeta? La acción no se podrá deshacer.</string>
    <string name="dialAcept">Aceptar</string>
    <string name="dialCancel">Cancelar</string>
    

</resources>