<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvTitleSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTitleSpeech"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="true"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/linestrans" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTitleSpeech"
        android:layout_marginTop="20dp"
        android:text="@string/etHeader"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/etHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ellipsize="end"
        android:ems="10"
        android:maxLength="25"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etHeader"
        android:layout_marginTop="20dp"
        android:text="@string/etBody"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/etBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPreview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="8"
        android:gravity="top"
        android:minEms="11" />

    <TextView
        android:id="@+id/btnPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnPreview"
        android:textSize="30dp"
        android:padding="5dp"
        android:background="#DDDDDD"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTitleSpeech"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_menu_revert"/>

</RelativeLayout>